--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -78,6 +78,14 @@
                                         </f:facet>
                                     </p:cellEditor>
                                 </p:column>
+                                <p:column headerText="Abreviatura">
+                                    <p:cellEditor>
+                                        <f:facet name="output"><p:outputLabel value="#{m.materiaAbreviacion}" /></f:facet>
+                                        <f:facet name="input"><p:inputText value="#{m.materiaAbreviacion}" 
+                                                                           style="width:100%" label="Nombre"/>
+                                        </f:facet>
+                                    </p:cellEditor>
+                                </p:column>
                                 <p:column headerText="Tipo Materia">
                                     <p:cellEditor>
                                         <f:facet name="output"><p:outputLabel value="#{m.tipoMateria.tipoMateriaNombre}" />
