--- a/saitae-web/src/main/webapp/pages/horarioCl.xhtml
+++ b/saitae-web/src/main/webapp/pages/horarioCl.xhtml
@@ -25,7 +25,7 @@
                 <p:dataTable id="horario" var="h" value="#{horarioClController.horario}"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} 
                              {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {Exporters}"
-                             paginator="true" rows="11" style="margin-bottom:20px"
+                             paginator="true"
                              paginatorPosition="top">
                     <f:facet name="{Exporters}">
                         <div style="float:right;padding-top: 5px;">
