interface para la modificación de la información de usuarios terminada. enviado a revisión.

--- a/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
+++ b/saitae-web/src/main/webapp/pages/infoPerfil.xhtml
@@ -520,7 +520,7 @@
             </h:form>
         </p:dialog>
 
-        <p:dialog id="dialog2" widgetVar="DConstancia" modal="true" style="width: 60%;"
+        <p:dialog id="dialog2" widgetVar="DConstancia2" modal="true" style="width: 60%;"
                   showHeader="true" header="Visualización de constancia de conducta" 
                   closeOnEscape="true">
             <h:form id="h2">
